<?php

namespace App\Enums;

enum ChatType: string
{
    case CUSTOMER_RESTAURANT = 'CUSTOMER_RESTAURANT';
    case CUSTOMER_COURIER = 'CUSTOMER_COURIER';
}
