<?php

namespace App\Enums;

enum OrderEventType: string
{
    case ORDER_CREATED = 'ORDER_CREATED';
    case ORDER_PAYMENT_COMPLETED = 'ORDER_PAYMENT_COMPLETED';
    case ORDER_CONFIRMED = 'ORDER_CONFIRMED';
    case ORDER_REJECTED = 'ORDER_REJECTED';
    case ORDER_COURIER_ASSIGNED = 'ORDER_COURIER_ASSIGNED';
    case ORDER_PREPARING = 'ORDER_PREPARING';
    case ORDER_READY = 'ORDER_READY';
    case ORDER_PICKED_UP = 'ORDER_PICKED_UP';
    case ORDER_OUT_FOR_DELIVERY = 'ORDER_OUT_FOR_DELIVERY';
    case ORDER_DELIVERED = 'ORDER_DELIVERED';
    case ORDER_CANCELLED = 'ORDER_CANCELLED';
}
